crates/flowlog-build/tests/errors/parser/comp_unknown.dl
// `.init` references a component that was never declared with `.comp`.
.init c = Container
